fixed alignment on desktop home projects

--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -44,6 +44,8 @@
     padding: 0 65px;
     a {align-self: center;}
     &-map {
+      display: flex;
+      flex-direction: column;
       padding: 0;
       margin: 0;
       list-style: none;
@@ -52,14 +54,14 @@
         flex-direction: row;
         justify-content: space-between;
         width: 90%;
-        margin-right: calc(10% - 40px);
+        align-self: flex-start;
         height: 200px;
         background-color: $background;
         border: 2px solid $font;
         &:nth-child(even){
           flex-direction: row-reverse;
           margin: 20px 0;
-          margin-left: calc(10% - 40px);
+          align-self: flex-end;
         }
 
         &-text {
